force-app/main/default/objects/Payment_Draft_Item__c/Payment_Draft_Item__c.object-meta.xml
<CustomObject>
    <label>Payment Draft Item</label>
    <nameField>
        <displayFormat>PDI-{0000}</displayFormat>
        <label>Payment Draft Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Draft Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>