force-app/main/default/objects/Payment_Draft_Item__c/fields/Calculation_Version__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Version__c</fullName>
    <description>Version number of the calculation that created this item. Increments with each recalculation.</description>
    <label>Calculation Version</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>