force-app/main/default/objects/Payment_Draft_Item__c/fields/Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Date__c</fullName>
    <description>Timestamp when this item was deactivated. Used for retention policy cleanup.</description>
    <label>Deactivated Date</label>
    <type>DateTime</type>
</CustomField>