force-app/main/default/objects/Payment_Draft_Item__c/fields/Draft_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Draft_Due_Date__c</fullName>
    <label>Draft Due Date</label>
    <type>Date</type>
</CustomField>