force-app/main/default/objects/Payment_Draft_Item__c/fields/Draft_Number__c.field-meta.xml
<CustomField>
    <fullName>Draft_Number__c</fullName>
    <label>Draft #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>