force-app/main/default/objects/Payment_Draft_Item__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this payment draft item is part of the current calculation. Inactive items are preserved for historical reference.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>