force-app/main/default/objects/Payment_Draft_Item__c/fields/Payment_Draft__c.field-meta.xml
<CustomField>
    <fullName>Payment_Draft__c</fullName>
    <label>Payment Draft</label>
    <referenceTo>PaymentDraft__c</referenceTo>
    <relationshipLabel>Payment Draft Items</relationshipLabel>
    <relationshipName>Payment_Draft_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>