force-app/main/default/objects/Payment_Draft_Item__c/fields/Program_Fee__c.field-meta.xml
<CustomField>
    <fullName>Program_Fee__c</fullName>
    <label>Program Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>