force-app/main/default/objects/Payment_Draft_Item__c/fields/Total_Draft__c.field-meta.xml
<CustomField>
    <fullName>Total_Draft__c</fullName>
    <label>Total Draft</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>